[package]
name = "game_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
wtransport = "0.6"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
uuid = { version = "1.0", features = ["v4"] }
rcgen = "0.13" # For self-signed certificates in dev
